feat: Author-Application первый запуск сервиса